[gd_scene load_steps=15 format=1]

[ext_resource path="res://scripts/dialog.gd" type="Script" id=1]
[ext_resource path="res://sprites/dialog_bg.png" type="Texture" id=2]
[ext_resource path="res://sprites/dialog_brace_left.png" type="Texture" id=3]
[ext_resource path="res://sprites/dialog_brace_right.png" type="Texture" id=4]
[ext_resource path="res://sprites/dialog_next.png" type="Texture" id=5]
[ext_resource path="res://fonts/pressstart2p.fnt" type="BitmapFont" id=6]
[ext_resource path="res://sfx/sound_click.wav" type="Sample" id=7]
[ext_resource path="res://sfx/sound_letter.wav" type="Sample" id=8]
[ext_resource path="res://sfx/sound_next.wav" type="Sample" id=9]

[sub_resource type="Animation" id=1]

resource/name = "close"
length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("dialog_brace_left:visibility/visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1 ),
"transitions": FloatArray( 0, 0 ),
"update": 0,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("dialog_brace_right:visibility/visible")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.1 ),
"transitions": FloatArray( 0, 0 ),
"update": 0,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("dialog_brace_left:transform/pos")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 0.1 ),
"transitions": FloatArray( 1, 0 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -64, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("dialog_brace_right:transform/pos")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0, 0.1 ),
"transitions": FloatArray( 1, 0 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 64, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("dialog_bg:visibility/visible")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": FloatArray( 0, 0.1 ),
"transitions": FloatArray( 0, 0 ),
"update": 0,
"values": [ true, false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("dialog_bg:visibility/opacity")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = {
"times": FloatArray( 0, 0.1 ),
"transitions": FloatArray( 0.25, 0 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("dialog_next:visibility/visible")
tracks/6/interp = 1
tracks/6/imported = false
tracks/6/keys = {
"times": FloatArray( 0, 0.1 ),
"transitions": FloatArray( 0, 1 ),
"update": 0,
"values": [ true, false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("text:visibility/visible")
tracks/7/interp = 1
tracks/7/imported = false
tracks/7/keys = {
"times": FloatArray( 0, 0.1 ),
"transitions": FloatArray( 0, 1 ),
"update": 0,
"values": [ true, false ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("text:visibility/opacity")
tracks/8/interp = 1
tracks/8/imported = false
tracks/8/keys = {
"times": FloatArray( 0, 0.1 ),
"transitions": FloatArray( 1, 4 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("dialog_next:visibility/opacity")
tracks/9/interp = 1
tracks/9/imported = false
tracks/9/keys = {
"times": FloatArray( 0, 0.1 ),
"transitions": FloatArray( 1, 4 ),
"update": 0,
"values": [ 1.0, 0.0 ]
}

[sub_resource type="Animation" id=2]

resource/name = "hide_next"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("dialog_next:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.2 ),
"transitions": FloatArray( 0, 0 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("dialog_next:visibility/visible")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 0, 0 ),
"update": 0,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("dialog_next:visibility/opacity")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 0.2, 0.5 ),
"transitions": FloatArray( 0, 1, 1 ),
"update": 0,
"values": [ 1.0, 1.0, 0.0 ]
}

[sub_resource type="Animation" id=3]

length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("dialog_brace_left:visibility/visible")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 0 ),
"update": 0,
"values": [ true, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("dialog_brace_right:visibility/visible")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 0 ),
"update": 0,
"values": [ true, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("dialog_brace_left:transform/pos")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0, 0.2, 0.5 ),
"transitions": FloatArray( 1, 0, 0 ),
"update": 0,
"values": [ Vector2( -64, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("dialog_brace_right:transform/pos")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0, 0.2, 0.5 ),
"transitions": FloatArray( 1, 0, 0 ),
"update": 0,
"values": [ Vector2( 64, 0 ), Vector2( 0, 0 ), Vector2( 0, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("dialog_bg:visibility/visible")
tracks/4/interp = 1
tracks/4/imported = false
tracks/4/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 0, 0 ),
"update": 0,
"values": [ true, true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("dialog_bg:visibility/opacity")
tracks/5/interp = 1
tracks/5/imported = false
tracks/5/keys = {
"times": FloatArray( 0, 0.2, 0.5 ),
"transitions": FloatArray( 0, 0.25, 0 ),
"update": 0,
"values": [ 0.0, 0.0, 1.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("text:visibility/visible")
tracks/6/interp = 1
tracks/6/imported = false
tracks/6/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 0 ),
"update": 0,
"values": [ false, true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("text:visibility/opacity")
tracks/7/interp = 1
tracks/7/imported = false
tracks/7/keys = {
"times": FloatArray( 0, 0.5 ),
"transitions": FloatArray( 1, 0 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="Animation" id=4]

length = 1.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("dialog_next:transform/pos")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.5, 1 ),
"transitions": FloatArray( 0, 0, 0 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 4 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("dialog_next:transform/rot")
tracks/1/interp = 1
tracks/1/imported = false
tracks/1/keys = {
"times": FloatArray( 0, 0.5, 1 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("dialog_next:visibility/visible")
tracks/2/interp = 1
tracks/2/imported = false
tracks/2/keys = {
"times": FloatArray( 0 ),
"transitions": FloatArray( 0 ),
"update": 0,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("dialog_next:visibility/opacity")
tracks/3/interp = 1
tracks/3/imported = false
tracks/3/keys = {
"times": FloatArray( 0, 1 ),
"transitions": FloatArray( 0, 0 ),
"update": 0,
"values": [ 1.0, 1.0 ]
}

[sub_resource type="SampleLibrary" id=5]

samples/click = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 7 )
}
samples/letter = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 8 )
}
samples/next = {
"db": 0.0,
"pitch": 1.0,
"priority": 0,
"sample": ExtResource( 9 )
}

[node name="dialog" type="Node"]

process/pause_mode = 2
script/script = ExtResource( 1 )

[node name="dialog_bg" type="Sprite" parent="."]

visibility/visible = false
visibility/opacity = 0.0
transform/scale = Vector2( 2, 2 )
texture = ExtResource( 2 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="dialog_brace_left" type="Sprite" parent="."]

visibility/visible = false
transform/pos = Vector2( -64, 0 )
transform/scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="dialog_brace_right" type="Sprite" parent="."]

visibility/visible = false
transform/pos = Vector2( 64, 0 )
transform/scale = Vector2( 2, 2 )
texture = ExtResource( 4 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="dialog_next" type="Sprite" parent="."]

transform/pos = Vector2( 0, 4 )
transform/scale = Vector2( 2, 2 )
texture = ExtResource( 5 )
centered = false
__meta__ = {
"_edit_lock_": true
}

[node name="text" type="Label" parent="."]

visibility/visible = false
visibility/opacity = 0.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 49.0
margin/top = 355.0
margin/right = 593.0
margin/bottom = 451.0
custom_fonts/font = ExtResource( 6 )
custom_constants/line_spacing = 10
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat."
autowrap = true
clip_text = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="anim" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/close = SubResource( 1 )
anims/hide_next = SubResource( 2 )
anims/open = SubResource( 3 )
anims/show_next = SubResource( 4 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="sound" type="SamplePlayer" parent="."]

config/polyphony = 1
config/samples = SubResource( 5 )
default/volume_db = 0.0
default/pitch_scale = 1.0
default/pan = 0.0
default/depth = 0.0
default/height = 0.0
default/filter/type = 0
default/filter/cutoff = 5000.0
default/filter/resonance = 1.0
default/filter/gain = 1.0
default/reverb_room = 2
default/reverb_send = 0.0
default/chorus_send = 0.0

[node name="timer_letter" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = true
autostart = false

[node name="timer_interaction" type="Timer" parent="."]

process_mode = 1
wait_time = 0.01
one_shot = false
autostart = false


